# GoodbyeNetwork

./: README.md
2/: CMakeLists.txt
2/include/: DataStructure.h  GBNRdtReceiver.h  GBNRdtSender.h  Global.h  NetworkService.h  RandomEventEnum.h  RdtReceiver.h  RdtSender.h  SRRdtReceiver.h  SRRdtSender.h  StopWaitRdtReceiver.h  StopWaitRdtSender.h  TCPReceiver.h  TCPSender.h  Tool.h  color.h
2/src/: GBNRdtReceiver.cpp  GBNRdtSender.cpp  SRRdtReceiver.cpp  SRRdtSender.cpp  StopWaitRdtReceiver.cpp  StopWaitRdtSender.cpp  TCPReceiver.cpp  TCPSender.cpp  main.cpp
3/: 1a.pkt  1b.pkt  2a.pkt  2b.pkt  2c.pkt  2d.pkt  3.pkt
