cmake_minimum_required(VERSION 3.16)
project(Rdt)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
add_executable(rdt ${SRC_LIST})
target_link_libraries(rdt ${PROJECT_SOURCE_DIR}/lib/libnetsim.a)